--- a/src/fasttext.ipynb
+++ b/src/fasttext.ipynb
@@ -9,8 +9,8 @@
    "source": [
     "import statistics\n",
     "import time\n",
-    "import fasttext\n",
     "\n",
+    "import fasttext\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from sklearn import metrics\n",
@@ -144,7 +144,7 @@
     "    actuals_ft = []\n",
     "    predictions_ft = []\n",
     "    prediction_times_ft = []\n",
-    "    \n",
+    "\n",
     "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "        text = str(row[\"prompt\"])\n",
     "\n",
@@ -205,21 +205,19 @@
     "\n",
     "for batch_size in tqdm(batch_sizes, desc='Processing batch sizes'):\n",
     "    all_results = []\n",
-    "    num_batches = 0\n",
     "    # create batches from batch_data\n",
     "    batches = [\n",
     "        batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
     "    ]\n",
     "    for batch in tqdm(batches, desc=f'Processing batches (size={batch_size})'):\n",
-    "        num_batches += 1\n",
     "        batch_metrics = {\n",
     "            \"time_taken_law\": 0,\n",
-    "            \"time_taken_finance\": 0,  \n",
+    "            \"time_taken_finance\": 0,\n",
     "            \"time_taken_healthcare\": 0\n",
     "        }\n",
     "\n",
     "        batch_prompt = [prompt.replace(\"\\n\", \"\") for prompt in batch]\n",
-    "        \n",
+    "\n",
     "        # Time law predictions\n",
     "        start_time = time.perf_counter()\n",
     "        law_preds = fasttext_law.predict(batch_prompt)\n",
@@ -236,7 +234,7 @@
     "        batch_metrics['time_taken_healthcare'] += time.perf_counter() - start_time\n",
     "\n",
     "        results =[]\n",
-    "        for prediction_finance, prediction_healthcare, prediction_law in zip(finance_preds[0], health_preds[0], law_preds[0]):\n",
+    "        for prediction_finance, prediction_healthcare, prediction_law in zip(finance_preds[0], health_preds[0], law_preds[0], strict=True):\n",
     "                results.append({\n",
     "                'finance': 1 if prediction_finance[0] == \"__label__1\" else 0,\n",
     "                'healthcare': 1 if prediction_healthcare[0] == \"__label__1\" else 0,\n",
