--- a/src/semantic-router.ipynb
+++ b/src/semantic-router.ipynb
@@ -9,17 +9,20 @@
     "import time\n",
     "\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
     "from dotenv import load_dotenv\n",
     "from semantic_router import Route\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "load_dotenv()\n",
-    "from semantic_router.routers import SemanticRouter\n",
     "from semantic_router.encoders import FastEmbedEncoder\n",
-    "from util import set_seed\n",
+    "from semantic_router.routers import SemanticRouter\n",
+    "\n",
     "import dataloader\n",
+    "from util import set_seed\n",
+    "\n",
     "set_seed(22)\n",
     "\n",
-    "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
    ]
   },
   {
@@ -43,12 +46,12 @@
     "batch_sizes = [1, 32, 64, 128, 256]\n",
     "\n",
     "domain_data = dataloader.get_domain_data()\n",
-    "domain_data.columns = [\"prompt\", \"domain\", 'label']\n",
+    "domain_data.columns = [\"prompt\", \"domain\", \"label\"]\n",
     "\n",
     "ood_data = dataloader.get_ood_data()\n",
     "\n",
     "train_data = dataloader.get_train_datasets()[\"train\"].to_pandas()\n",
-    "train_data.columns = [\"text\", \"domain\", 'label']\n"
+    "train_data.columns = [\"text\", \"domain\", \"label\"]\n"
    ]
   },
   {
@@ -57,13 +60,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inference_rl(rl : SemanticRouter, input):\n",
+    "def inference_rl(rl: SemanticRouter, input):\n",
     "    name = rl(input).name\n",
     "    if name:\n",
     "        return name\n",
     "    else:\n",
     "        return \"other\"\n",
-    "def inference_rl_batch(rl : SemanticRouter, inputs : list):\n",
+    "\n",
+    "\n",
+    "def inference_rl_batch(rl: SemanticRouter, inputs: list):\n",
     "    outputs = []\n",
     "    for i in inputs:\n",
     "        outputs.append(inference_rl(rl, i))\n",
@@ -78,66 +83,77 @@
    "source": [
     "for model in [\"sentence-transformers/all-MiniLM-L6-v2\", \"BAAI/bge-small-en-v1.5\"]:\n",
     "    embedder = FastEmbedEncoder(score_threshold=0.9)\n",
-    "    embedder.name = model # \n",
+    "    embedder.name = model  #\n",
     "    embedder._initialize_client()\n",
     "\n",
     "    model = model.replace(\"/\", \"_\")\n",
     "\n",
     "    law = Route(\n",
     "        name=\"law\",\n",
-    "        utterances=train_data[train_data['domain']=='law'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"law\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
     "    finance = Route(\n",
     "        name=\"finance\",\n",
-    "        utterances=train_data[train_data['domain']=='finance'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"finance\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
     "    healthcare = Route(\n",
     "        name=\"healthcare\",\n",
-    "        utterances=train_data[train_data['domain']=='healthcare'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"healthcare\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
-    "    routes = [law,finance, healthcare]\n",
+    "    routes = [law, finance, healthcare]\n",
     "\n",
     "    rl = SemanticRouter(encoder=embedder, routes=routes, auto_sync=\"local\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(ood_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(ood_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    ood_data['pred'] = results\n",
+    "    ood_data[\"pred\"] = results\n",
     "    ood_data.to_csv(f\"data/results/semantic_router_ood_results_{model}_5_t-09.csv\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(domain_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(domain_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    domain_data['pred'] = results\n",
-    "    domain_data.to_csv(f\"data/results/semantic_router_domain_results_{model}_5_t-09.csv\")\n",
+    "    domain_data[\"pred\"] = results\n",
+    "    domain_data.to_csv(\n",
+    "        f\"data/results/semantic_router_domain_results_{model}_5_t-09.csv\"\n",
+    "    )\n",
     "\n",
     "    batch_results = []\n",
     "    for batch_size in tqdm(batch_sizes):\n",
     "        batches = [\n",
-    "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
+    "            batch_data[i : i + batch_size]\n",
+    "            for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            \n",
     "            # Time law predictions\n",
     "            start_time = time.perf_counter()\n",
     "            preds = inference_rl_batch(rl, batch)\n",
     "            time_taken = start_time - time.perf_counter()\n",
     "\n",
-    "\n",
-    "            batch_results.append({\n",
-    "                \"batch_size\": batch_size,\n",
-    "                \"time_taken\": time_taken,\n",
-    "                \"results\": preds,\n",
-    "                \"model_name\": \"semantic_router\",\n",
-    "                \"embedding_model\": model,\n",
-    "            })\n",
+    "            batch_results.append(\n",
+    "                {\n",
+    "                    \"batch_size\": batch_size,\n",
+    "                    \"time_taken\": time_taken,\n",
+    "                    \"results\": preds,\n",
+    "                    \"model_name\": \"semantic_router\",\n",
+    "                    \"embedding_model\": model,\n",
+    "                }\n",
+    "            )\n",
     "    batch_results_df = pd.DataFrame(batch_results)\n",
-    "    batch_results_df.to_csv(f\"data/results/semantic_router_batch_results_{model}_5_t-90.csv\")"
+    "    batch_results_df.to_csv(\n",
+    "        f\"data/results/semantic_router_batch_results_{model}_5_t-90.csv\"\n",
+    "    )"
    ]
   },
   {
@@ -148,66 +164,75 @@
    "source": [
     "for model in [\"sentence-transformers/all-MiniLM-L6-v2\", \"BAAI/bge-small-en-v1.5\"]:\n",
     "    embedder = FastEmbedEncoder(score_threshold=0.9)\n",
-    "    embedder.name = model # \n",
+    "    embedder.name = model  #\n",
     "    embedder._initialize_client()\n",
     "\n",
     "    model = model.replace(\"/\", \"_\")\n",
     "\n",
     "    law = Route(\n",
     "        name=\"law\",\n",
-    "        utterances=train_data[train_data['domain']=='law']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"law\"][\"text\"].values.tolist(),\n",
     "    )\n",
     "\n",
     "    finance = Route(\n",
     "        name=\"finance\",\n",
-    "        utterances=train_data[train_data['domain']=='finance']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"finance\"][\n",
+    "            \"text\"\n",
+    "        ].values.tolist(),\n",
     "    )\n",
     "\n",
     "    healthcare = Route(\n",
     "        name=\"healthcare\",\n",
-    "        utterances=train_data[train_data['domain']=='healthcare']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"healthcare\"][\n",
+    "            \"text\"\n",
+    "        ].values.tolist(),\n",
     "    )\n",
     "\n",
-    "    routes = [law,finance, healthcare]\n",
+    "    routes = [law, finance, healthcare]\n",
     "\n",
     "    rl = SemanticRouter(encoder=embedder, routes=routes, auto_sync=\"local\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(ood_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(ood_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    ood_data['pred'] = results\n",
+    "    ood_data[\"pred\"] = results\n",
     "    ood_data.to_csv(f\"data/results/semantic_router_ood_results_{model}_all_t-09.csv\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(domain_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(domain_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    domain_data['pred'] = results\n",
-    "    domain_data.to_csv(f\"data/results/semantic_router_domain_results_{model}_all_t-09.csv\")\n",
+    "    domain_data[\"pred\"] = results\n",
+    "    domain_data.to_csv(\n",
+    "        f\"data/results/semantic_router_domain_results_{model}_all_t-09.csv\"\n",
+    "    )\n",
     "\n",
     "    batch_results = []\n",
     "    for batch_size in tqdm(batch_sizes):\n",
     "        batches = [\n",
-    "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
+    "            batch_data[i : i + batch_size]\n",
+    "            for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            \n",
     "            # Time law predictions\n",
     "            start_time = time.perf_counter()\n",
     "            preds = inference_rl_batch(rl, batch)\n",
     "            time_taken = start_time - time.perf_counter()\n",
     "\n",
-    "\n",
-    "            batch_results.append({\n",
-    "                \"batch_size\": batch_size,\n",
-    "                \"time_taken\": time_taken,\n",
-    "                \"results\": preds,\n",
-    "                \"model_name\": \"semantic_router\",\n",
-    "                \"embedding_model\": model,\n",
-    "            })\n",
+    "            batch_results.append(\n",
+    "                {\n",
+    "                    \"batch_size\": batch_size,\n",
+    "                    \"time_taken\": time_taken,\n",
+    "                    \"results\": preds,\n",
+    "                    \"model_name\": \"semantic_router\",\n",
+    "                    \"embedding_model\": model,\n",
+    "                }\n",
+    "            )\n",
     "    batch_results_df = pd.DataFrame(batch_results)\n",
-    "    batch_results_df.to_csv(f\"data/results/semantic_router_batch_results_{model}_all_t-90.csv\")\n"
+    "    batch_results_df.to_csv(\n",
+    "        f\"data/results/semantic_router_batch_results_{model}_all_t-90.csv\"\n",
+    "    )\n"
    ]
   },
   {
@@ -218,66 +243,77 @@
    "source": [
     "for model in [\"sentence-transformers/all-MiniLM-L6-v2\", \"BAAI/bge-small-en-v1.5\"]:\n",
     "    embedder = FastEmbedEncoder(score_threshold=0.5)\n",
-    "    embedder.name = model # \n",
+    "    embedder.name = model  #\n",
     "    embedder._initialize_client()\n",
     "\n",
     "    model = model.replace(\"/\", \"_\")\n",
     "\n",
     "    law = Route(\n",
     "        name=\"law\",\n",
-    "        utterances=train_data[train_data['domain']=='law'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"law\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
     "    finance = Route(\n",
     "        name=\"finance\",\n",
-    "        utterances=train_data[train_data['domain']=='finance'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"finance\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
     "    healthcare = Route(\n",
     "        name=\"healthcare\",\n",
-    "        utterances=train_data[train_data['domain']=='healthcare'].sample(5)['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"healthcare\"]\n",
+    "        .sample(5)[\"text\"]\n",
+    "        .values.tolist(),\n",
     "    )\n",
     "\n",
-    "    routes = [law,finance, healthcare]\n",
+    "    routes = [law, finance, healthcare]\n",
     "\n",
     "    rl = SemanticRouter(encoder=embedder, routes=routes, auto_sync=\"local\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(ood_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(ood_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    ood_data['pred'] = results\n",
+    "    ood_data[\"pred\"] = results\n",
     "    ood_data.to_csv(f\"data/results/semantic_router_ood_results_{model}_5_t-09.csv\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(domain_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(domain_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    domain_data['pred'] = results\n",
-    "    domain_data.to_csv(f\"data/results/semantic_router_domain_results_{model}_5_t-09.csv\")\n",
+    "    domain_data[\"pred\"] = results\n",
+    "    domain_data.to_csv(\n",
+    "        f\"data/results/semantic_router_domain_results_{model}_5_t-09.csv\"\n",
+    "    )\n",
     "\n",
     "    batch_results = []\n",
     "    for batch_size in tqdm(batch_sizes):\n",
     "        batches = [\n",
-    "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
+    "            batch_data[i : i + batch_size]\n",
+    "            for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            \n",
     "            # Time law predictions\n",
     "            start_time = time.perf_counter()\n",
     "            preds = inference_rl_batch(rl, batch)\n",
     "            time_taken = start_time - time.perf_counter()\n",
     "\n",
-    "\n",
-    "            batch_results.append({\n",
-    "                \"batch_size\": batch_size,\n",
-    "                \"time_taken\": time_taken,\n",
-    "                \"results\": preds,\n",
-    "                \"model_name\": \"semantic_router\",\n",
-    "                \"embedding_model\": model,\n",
-    "            })\n",
+    "            batch_results.append(\n",
+    "                {\n",
+    "                    \"batch_size\": batch_size,\n",
+    "                    \"time_taken\": time_taken,\n",
+    "                    \"results\": preds,\n",
+    "                    \"model_name\": \"semantic_router\",\n",
+    "                    \"embedding_model\": model,\n",
+    "                }\n",
+    "            )\n",
     "    batch_results_df = pd.DataFrame(batch_results)\n",
-    "    batch_results_df.to_csv(f\"data/results/semantic_router_batch_results_{model}_5_t-50.csv\")"
+    "    batch_results_df.to_csv(\n",
+    "        f\"data/results/semantic_router_batch_results_{model}_5_t-50.csv\"\n",
+    "    )"
    ]
   },
   {
@@ -288,68 +324,75 @@
    "source": [
     "for model in [\"sentence-transformers/all-MiniLM-L6-v2\", \"BAAI/bge-small-en-v1.5\"]:\n",
     "    embedder = FastEmbedEncoder(score_threshold=0.5)\n",
-    "    embedder.name = model # \n",
+    "    embedder.name = model\n",
     "    embedder._initialize_client()\n",
     "\n",
     "    model = model.replace(\"/\", \"_\")\n",
     "\n",
     "    law = Route(\n",
     "        name=\"law\",\n",
-    "        utterances=train_data[train_data['domain']=='law']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"law\"][\"text\"].values.tolist(),\n",
     "    )\n",
     "\n",
     "    finance = Route(\n",
     "        name=\"finance\",\n",
-    "        utterances=train_data[train_data['domain']=='finance']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"finance\"][\n",
+    "            \"text\"\n",
+    "        ].values.tolist(),\n",
     "    )\n",
     "\n",
     "    healthcare = Route(\n",
     "        name=\"healthcare\",\n",
-    "        utterances=train_data[train_data['domain']=='healthcare']['text'].values.tolist(),\n",
+    "        utterances=train_data[train_data[\"domain\"] == \"healthcare\"][\n",
+    "            \"text\"\n",
+    "        ].values.tolist(),\n",
     "    )\n",
     "\n",
-    "    routes = [law,finance, healthcare]\n",
+    "    routes = [law, finance, healthcare]\n",
     "\n",
     "    rl = SemanticRouter(encoder=embedder, routes=routes, auto_sync=\"local\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(ood_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(ood_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    ood_data['pred'] = results\n",
+    "    ood_data[\"pred\"] = results\n",
     "    ood_data.to_csv(f\"data/results/semantic_router_ood_results_{model}_all_t-09.csv\")\n",
     "\n",
     "    results = []\n",
-    "    for text in tqdm(domain_data['prompt'].values.tolist()):\n",
+    "    for text in tqdm(domain_data[\"prompt\"].values.tolist()):\n",
     "        result = inference_rl(rl, text)\n",
     "        results.append(result)\n",
-    "    domain_data['pred'] = results\n",
-    "    domain_data.to_csv(f\"data/results/semantic_router_domain_results_{model}_all_t-09.csv\")\n",
+    "    domain_data[\"pred\"] = results\n",
+    "    domain_data.to_csv(\n",
+    "        f\"data/results/semantic_router_domain_results_{model}_all_t-09.csv\"\n",
+    "    )\n",
     "\n",
     "    batch_results = []\n",
     "    for batch_size in tqdm(batch_sizes):\n",
     "        batches = [\n",
-    "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
+    "            batch_data[i : i + batch_size]\n",
+    "            for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            \n",
     "            # Time law predictions\n",
     "            start_time = time.perf_counter()\n",
     "            preds = inference_rl_batch(rl, batch)\n",
     "            time_taken = start_time - time.perf_counter()\n",
     "\n",
-    "\n",
-    "            batch_results.append({\n",
-    "                \"batch_size\": batch_size,\n",
-    "                \"time_taken\": time_taken,\n",
-    "                \"results\": preds,\n",
-    "                \"model_name\": \"semantic_router\",\n",
-    "                \"embedding_model\": model,\n",
-    "            })\n",
+    "            batch_results.append(\n",
+    "                {\n",
+    "                    \"batch_size\": batch_size,\n",
+    "                    \"time_taken\": time_taken,\n",
+    "                    \"results\": preds,\n",
+    "                    \"model_name\": \"semantic_router\",\n",
+    "                    \"embedding_model\": model,\n",
+    "                }\n",
+    "            )\n",
     "    batch_results_df = pd.DataFrame(batch_results)\n",
-    "    batch_results_df.to_csv(f\"data/results/semantic_router_batch_results_{model}_all_t-50.csv\")\n",
-    "\n",
-    "\n"
+    "    batch_results_df.to_csv(\n",
+    "        f\"data/results/semantic_router_batch_results_{model}_all_t-50.csv\"\n",
+    "    )\n"
    ]
   },
   {
