--- a/src/svm.ipynb
+++ b/src/svm.ipynb
@@ -7,15 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle as pkl\n",
+    "import statistics\n",
     "import time\n",
     "\n",
-    "import statistics\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "import numpy as np\n",
-    "import pickle as pkl\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from fastembed import TextEmbedding\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -69,7 +69,7 @@
     "\n",
     "tfidf_embedding.fit(train_prompts)\n",
     "\n",
-    "with open(f\"models/tfidf.pkl\", \"wb\") as f:\n",
+    "with open(\"models/tfidf.pkl\", \"wb\") as f:\n",
     "    pkl.dump(tfidf_embedding, f)"
    ]
   },
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "# TF-IDF\n",
-    "tfidf_embedding = pkl.load(open(\"models/tfidf.pkl\", \"rb\"))\n",
+    "tfidf_embedding = pkl.load(\"models/tfidf.pkl\", \"rb\")\n",
     "\n",
     "embedding_models = {\n",
     "    \"mini\": mini_embedding,\n",
@@ -196,10 +196,14 @@
     "        else:\n",
     "            start_time = time.perf_counter_ns()\n",
     "            if embed_model_name == \"mini\":\n",
-    "                test_embeds = np.array(list(mini_embedding.embed(inference_df[\"prompt\"])))\n",
+    "                test_embeds = np.array(\n",
+    "                    list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
+    "                )\n",
     "            else:  # baai\n",
-    "                test_embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
-    "                \n",
+    "                test_embeds = np.array(\n",
+    "                    list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
+    "                )\n",
+    "\n",
     "            end_time = time.perf_counter_ns()\n",
     "            embed_times = end_time - start_time\n",
     "            mean_embed_time = embed_times / len(inference_df)\n",
@@ -221,11 +225,7 @@
     "            prediction_times_svm.append(end_time - start_time)\n",
     "            predictions_svm.append(\n",
     "                0\n",
-    "                if (\n",
-    "                    pred_finance[0] == 1\n",
-    "                    or pred_healthcare[0] == 1\n",
-    "                    or pred_law[0] == 1\n",
-    "                )\n",
+    "                if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1)\n",
     "                else 1\n",
     "            )\n",
     "\n",
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]: \n",
+    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]:\n",
     "    svm_batch_results = []\n",
     "    with open(f\"models/SVM_finance_{embed_model_name}.pkl\", \"rb\") as f:\n",
     "        svm_finance = pkl.load(f)\n",
@@ -269,7 +269,8 @@
     "\n",
     "    for batch_size in batch_sizes:\n",
     "        batches = [\n",
-    "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
+    "            batch_data[i : i + batch_size]\n",
+    "            for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
     "            batch_metrics = {\n",
@@ -285,40 +286,46 @@
     "                embeds = tfidf_embedding.transform(batch)\n",
     "            elif embedding_model == \"mini\":\n",
     "                embeds = np.array(list(mini_embedding.embed(batch)))\n",
-    "            else: \n",
+    "            else:\n",
     "                embeds = np.array(list(baai_embedding.embed(batch)))\n",
-    "            batch_metrics['embed_time'] += time.perf_counter() - start_time\n",
+    "            batch_metrics[\"embed_time\"] += time.perf_counter() - start_time\n",
     "\n",
     "            # Get all predictions and time them\n",
     "            start_time = time.perf_counter()\n",
     "            svm_law_preds = svm_law.predict(embeds)\n",
-    "            batch_metrics['svm_law_time'] += time.perf_counter() - start_time\n",
+    "            batch_metrics[\"svm_law_time\"] += time.perf_counter() - start_time\n",
     "\n",
     "            start_time = time.perf_counter()\n",
     "            svm_finance_preds = svm_finance.predict(embeds)\n",
-    "            batch_metrics['svm_finance_time'] += time.perf_counter() - start_time\n",
+    "            batch_metrics[\"svm_finance_time\"] += time.perf_counter() - start_time\n",
     "\n",
-    "            start_time = time.perf_counter() \n",
+    "            start_time = time.perf_counter()\n",
     "            svm_health_preds = svm_healthcare.predict(embeds)\n",
-    "            batch_metrics['svm_health_time'] += time.perf_counter() - start_time\n",
+    "            batch_metrics[\"svm_health_time\"] += time.perf_counter() - start_time\n",
     "            # Combine predictions - 0 only if all predict 0\n",
-    "            svm_batch_preds = [1 if (l or f or h) else 0\n",
-    "                                for l,f,h in zip(svm_law_preds, svm_finance_preds, svm_health_preds)]\n",
-    "            \n",
-    "            # Record results for this batch size (averaged)\n",
-    "            svm_batch_results.append({\n",
-    "                \"batch_size\": batch_size,\n",
-    "                \"time_taken_embed\": batch_metrics['embed_time'],\n",
-    "                \"time_taken_law\": batch_metrics['svm_law_time'],\n",
-    "                \"time_taken_finance\": batch_metrics['svm_finance_time'],\n",
-    "                \"time_taken_healthcare\": batch_metrics['svm_health_time'],\n",
-    "                \"results\": svm_batch_preds,\n",
-    "                \"model_name\": \"svm\",\n",
-    "                \"embedding_model\": embedding_model,\n",
-    "                \"embedding\": True\n",
-    "            })\n",
+    "            svm_batch_preds = [\n",
+    "                1 if (l or f or h) else 0\n",
+    "                for l, f, h in zip(svm_law_preds, svm_finance_preds, svm_health_preds, strict=True)\n",
+    "            ]\n",
     "\n",
-    "    pd.DataFrame(svm_batch_results).to_csv(f\"data/results/batch_svm_{embedding_model}.csv\", index=False)\n"
+    "            # Record results for this batch size (averaged)\n",
+    "            svm_batch_results.append(\n",
+    "                {\n",
+    "                    \"batch_size\": batch_size,\n",
+    "                    \"time_taken_embed\": batch_metrics[\"embed_time\"],\n",
+    "                    \"time_taken_law\": batch_metrics[\"svm_law_time\"],\n",
+    "                    \"time_taken_finance\": batch_metrics[\"svm_finance_time\"],\n",
+    "                    \"time_taken_healthcare\": batch_metrics[\"svm_health_time\"],\n",
+    "                    \"results\": svm_batch_preds,\n",
+    "                    \"model_name\": \"svm\",\n",
+    "                    \"embedding_model\": embedding_model,\n",
+    "                    \"embedding\": True,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "    pd.DataFrame(svm_batch_results).to_csv(\n",
+    "        f\"data/results/batch_svm_{embedding_model}.csv\", index=False\n",
+    "    )\n"
    ]
   },
   {
