--- a/src/svm.ipynb
+++ b/src/svm.ipynb
@@ -36,7 +36,7 @@
     "eval_datasets = dataloader.get_eval_datasets()\n",
     "batch_data = dataloader.get_batch_data()\n",
     "\n",
-    "batch_sizes = [1, 32]"
+    "batch_sizes = [1, 32, 64, 128, 256]"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "    \"mini\": mini_embedding,\n",
     "    \"tf_idf\": tfidf_embedding,\n",
     "    \"baai\": baai_embedding,\n",
-    "}\n"
+    "}"
    ]
   },
   {
