--- a/src/xgboost.ipynb
+++ b/src/xgboost.ipynb
@@ -7,17 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle as pkl\n",
+    "import statistics\n",
     "import time\n",
     "\n",
-    "import statistics\n",
-    "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "import pickle as pkl\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from fastembed import TextEmbedding\n",
-    "from xgboost import XGBClassifier\n",
     "import cupy as cp\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "from fastembed import TextEmbedding\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -38,7 +38,7 @@
     "eval_datasets = dataloader.get_eval_datasets()\n",
     "batch_data = dataloader.get_batch_data()\n",
     "\n",
-    "batch_sizes = [1, 32]"
+    "batch_sizes = [1, 32, 64, 128, 256]"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "\n",
     "tfidf_embedding.fit(train_prompts)\n",
     "\n",
-    "with open(f\"models/tfidf.pkl\", \"wb\") as f:\n",
+    "with open(\"models/tfidf.pkl\", \"wb\") as f:\n",
     "    pkl.dump(tfidf_embedding, f)"
    ]
   },
@@ -143,7 +143,7 @@
     "            save_path=f\"models/XGBoost_{domain}_{model_name}.json\",\n",
     "            embedding_time=mean_embed_time,\n",
     "            training=True,\n",
-    "        )\n"
+    "        )"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "# TF-IDF\n",
-    "tfidf_embedding = pkl.load(open(\"models/tfidf.pkl\", \"rb\"))\n",
+    "tfidf_embedding = pkl.load(\"models/tfidf.pkl\", \"rb\")\n",
     "\n",
     "embedding_models = {\n",
     "    \"mini\": mini_embedding,\n",
@@ -208,20 +208,20 @@
     "            embed_times = end_time - start_time\n",
     "            mean_embed_time = embed_times / len(inference_df)\n",
     "\n",
-    "        embeds = cp.array(embeds)\n",
+    "        embeds = cp.array(embeds) # Move to GPU, so we can use XGBoost with GPU\n",
     "\n",
     "        predictions_xgb = []\n",
     "        prediction_times_xgb = []\n",
     "\n",
     "        # Make predictions\n",
-    "        for test_embed in test_embeds:\n",
-    "            test_embed = test_embed.reshape(1, -1)\n",
+    "        for embed in embeds:\n",
+    "            embed = embed.reshape(1, -1)\n",
     "\n",
     "            # XGBoost predictions\n",
     "            start_time = time.perf_counter_ns()\n",
-    "            pred_finance = xgb_finance.predict(test_embed)\n",
-    "            pred_healthcare = xgb_healthcare.predict(test_embed)\n",
-    "            pred_law = xgb_law.predict(test_embed)\n",
+    "            pred_finance = xgb_finance.predict(embed)\n",
+    "            pred_healthcare = xgb_healthcare.predict(embed)\n",
+    "            pred_law = xgb_law.predict(embed)\n",
     "            end_time = time.perf_counter_ns()\n",
     "\n",
     "            prediction_times_xgb.append(end_time - start_time)\n",
@@ -263,19 +263,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]:    \n",
+    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]:\n",
     "    xgb_batch_results = []\n",
     "\n",
     "    for batch_size in batch_sizes:\n",
     "        xgb_all_results = []\n",
-    "        num_batches = 0\n",
     "\n",
     "        batches = [\n",
     "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            num_batches += 1\n",
-    "\n",
     "            batch_metrics = {\n",
     "                \"embed_time\": 0,\n",
     "                \"xgb_law_time\": 0,\n",
@@ -310,7 +307,7 @@
     "            batch_metrics['xgb_health_time'] += time.perf_counter() - start_time\n",
     "\n",
     "            xgb_batch_preds = [1 if (l or f or h) else 0\n",
-    "                                for l,f,h in zip(xgb_law_preds, xgb_finance_preds, xgb_health_preds)]\n",
+    "                                for l,f,h in zip(xgb_law_preds, xgb_finance_preds, xgb_health_preds, strict=True)]\n",
     "\n",
     "\n",
     "            xgb_batch_results.append({\n",
@@ -324,7 +321,7 @@
     "                \"embedding_model\": embedding_model,\n",
     "                \"embedding\": True\n",
     "            })\n",
-    "    \n",
+    "\n",
     "    pd.DataFrame(xgb_batch_results).to_csv(f\"data/results/batch_xgb_{embedding_model}.csv\", index=False)"
    ]
   }
