recompute flag added

--- a/src/xgboost.ipynb
+++ b/src/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5786d58",
    "metadata": {},
    "outputs": [
@@ -121,23 +121,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1a0f5bfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cached_embeddings(texts, model_name, domain, cache_dir=\"cache/embeddings\"):\n",
-    "    \"\"\"Get embeddings from cache if available, otherwise compute and cache them.\"\"\"\n",
+    "def get_cached_embeddings(texts, model_name, domain, cache_dir=\"cache/embeddings\", force_recompute=False):\n",
+    "    \"\"\"Get embeddings from cache if available, otherwise compute and cache them.\n",
+    "    \n",
+    "    Args:\n",
+    "        texts: The texts to embed\n",
+    "        model_name: The name of the embedding model to use\n",
+    "        domain: The domain identifier for the cache\n",
+    "        cache_dir: Directory to store/retrieve cached embeddings\n",
+    "        force_recompute: If True, ignore cache and recompute embeddings\n",
+    "    \n",
+    "    Returns:\n",
+    "        The embeddings matrix\n",
+    "    \"\"\"\n",
     "    cache_file = f\"{cache_dir}/{domain}_{model_name}_embeddings.pkl\"\n",
     "    \n",
-    "    # Check if cache exists\n",
-    "    if os.path.exists(cache_file):\n",
+    "    # Check if cache exists and we're not forcing recomputation\n",
+    "    if os.path.exists(cache_file) and not force_recompute:\n",
     "        print(f\"Loading cached embeddings for {domain} using {model_name}\")\n",
     "        with open(cache_file, 'rb') as f:\n",
     "            return pkl.load(f)\n",
     "    \n",
-    "    # Cache doesn't exist, compute embeddings\n",
-    "    print(f\"Computing embeddings for {domain} using {model_name}...\")\n",
+    "    # Cache doesn't exist or forced recomputation\n",
+    "    if force_recompute:\n",
+    "        print(f\"Force recomputing embeddings for {domain} using {model_name}...\")\n",
+    "    else:\n",
+    "        print(f\"Computing embeddings for {domain} using {model_name}...\")\n",
     "    \n",
     "    if model_name == \"tf_idf\":\n",
     "        embeddings = tfidf_embedding.transform(texts)\n",
@@ -432,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9b1d4d13",
    "metadata": {},
    "outputs": [
