--- a/src/semantic-router.ipynb
+++ b/src/semantic-router.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_batch_data():\n",
+    "def load_batch_data() -> list:\n",
     "    batch_data = dataloader.get_batch_data()\n",
     "    return batch_data[\"prompt\"].values.tolist()"
    ]
@@ -405,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
